--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-}
 .html1 {
   background: url(Images/Gunslinger_Background_Portrait.png) no-repeat center center fixed;
   background-size: cover;
@@ -81,4 +80,46 @@
     left:50%;
     z-index: 1;
     transform: rotate(90deg);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+  canvas {
+    display: block;
   }
